--- a/source/index.html
+++ b/source/index.html
@@ -1,12 +1,97 @@
 <!DOCTYPE html>
-<html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Мишка</title>
-  </head>
-  <body>
+<html class="page" lang="ru">
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS, уровень 2</a>».</p>
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Мишка</title>
+</head>
 
-  </body>
+<body class="page-body">
+  <header class="page-header">
+    <a href="index.html" class="page-header__logo">
+      <img src="https://via.placeholder.com/150x150" alt="Логотип компании Mishka" width="86" height="35">
+    </a>
+    <button class="page-header__toggle" type="button">
+      <span class="visually-hidden">Открыть меню</span>
+    </button>
+    <nav class="main-nav">
+      <div class="main-nav__wrapper">
+        <ul class="main-nav__list site-list">
+          <li class="site-list__item">
+            <a class="site-list__link" href="catalog.html">Каталог товаров</a>
+          </li>
+          <li class="site-list__item">
+            <a class="site-list__link" href="form.html">Вязание на заказ</a>
+          </li>
+          <li class="site-list__item site-list__item-search">
+            <a class="site-list__link" href="#">Поиск по сайту</a>
+          </li>
+          <li class="site-list__item site-list__item-basket">
+            <a class="site-list__link" href="#">Корзина: пока пуста</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+  <main class="page-main">
+    <h1 class="visually-hidden">Магазин Mishka</h1>
+    <section class="product">
+      <header class="product__header">
+        <h2 class="visually-hidden">Товары магазина</h2>
+        <p class="product__slogan">Милые штуки ручной работы для дома</p>
+      </header>
+      <ul class="product__list">
+        <li class="product__list-item"><a class="product__list-link" href="catalog.html">Предметы интерьера</a></li>
+        <li class="product__list-item"><a class="product__list-link" href="catalog.html">Детские игрушки</a></li>
+      </ul>
+    </section>
+    <section class="product-week">
+      <h2 class="product-week__type">Вязаные корзинки</h2>
+      <p class="product-week__title">ТОВАР НЕДЕЛИ</p>
+      <p class="product-week__description">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех
+        размерах.</p>
+      <div class="product-week__specification-list">
+        <div class="product-week__specification-item">
+          <span class="product-week__specification-type">Цвет:</span>
+          <span class="product-week__specification-description">«Тиффани»/серый</span>
+        </div>
+        <div class="product-week__specification-item">
+          <span class="product-week__specification-type">Диаметр:</span>
+          <span class="product-week__specification-description">25 см</span>
+        </div>
+        <div class="product-week__specification-item">
+          <span class="product-week__specification-type">Высота:</span>
+          <span class="product-week__specification-description">15 см</span>
+        </div>
+      </div>
+      <img src="https://via.placeholder.com/150x150" alt="Вязаные корзинки">
+      <span class="product-week__price">Цена: 990 руб.</span>
+      <a href="#" class="button product-week__button">Заказать</a>
+    </section>
+    <section class="about">
+      <h2 class="about__heading">Коротко о нас:</h2>
+      <ul class="about__list">
+        <li class="about__item">Экологически чистые материалы</li>
+        <li class="about__item">Скандинавский стиль по российской цене</li>
+        <li class="about__item">Увеличивает лайки на фотографиях</li>
+        <li class="about__item">Связано вручную с любовью и умилением</li>
+        <li class="about__item">оддержка отечественного производителя</li>
+        <li class="about__item">Поставляется в подарочной упаковке</li>
+      </ul>
+    </section>
+  </main>
+  <footer class="page-footer">
+    <section class="page-footer__social social">
+      <h2 class="visually-hidden">Мы в социальных сетях</h2>
+      <a href="#" class="social__link social__link--ig"></a>
+      <a href="#" class="social__link social__link--fb"></a>
+      <a href="#" class="social__link social__link--tw"></a>
+    </section>
+    <div class="page-footer__copyright copyright">
+      <b class="copyright__text">Разработано</b>
+      <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive"></a>
+    </div>
+  </footer>
+</body>
+
 </html>
