--- a/source/catalog.html
+++ b/source/catalog.html
@@ -24,10 +24,10 @@
           <li class="site-list__item">
             <a class="site-list__link" href="form.html">Вязание на заказ</a>
           </li>
-          <li class="site-list__item site-list__item-search">
+          <li class="site-list__item site-list__item--search">
             <a class="site-list__link" href="#">Поиск по сайту</a>
           </li>
-          <li class="site-list__item site-list__item-basket">
+          <li class="site-list__item site-list__item--basket">
             <a class="site-list__link" href="#">Корзина: пока пуста</a>
           </li>
         </ul>
@@ -35,50 +35,57 @@
     </nav>
   </header>
   <main>
-    <header class="catalog-header">
+    <div class="catalog-header">
       <h1 class="catalog-header__title">Каталог товаров</h1>
-    </header>
+    </div>
     <section class="catalog">
       <h2 class="visually-hidden">Список товаров</h2>
-      <div class="catalog__product">
-        <a href="#" class="catalog__product-link"><img src="https://via.placeholder.com/150x150"
-            alt="Зайчик-попрыгайчик">
-          <p class="catalog__product-name">Зайчик-попрыгайчик</p>
-        </a>
-
-        <p class="catalog__product-description">Рост 30 см, вес 200 г</p>
-        <span class="catalog__product-price">1 200 руб.</span>
-      </div>
-      <div class="catalog__product">
-        <a href="#" class="catalog__product-link"><img src="https://via.placeholder.com/150x150"
-            alt="Корзинка для белья">
-          <p class="catalog__product-name">Корзинка для белья</p>
-        </a>
-
-        <p class="catalog__product-description">Диаметр 15 см, высота 10 см</p>
-        <span class="catalog__product-price">690 руб.</span>
-      </div>
-      <div class="catalog__product">
-        <a href="#" class="catalog__product-link"><img src="https://via.placeholder.com/150x150"
-            alt="Большая корзинка для игрушек">
-          <p class="catalog__product-name">Большая корзинка для игрушек</p>
-        </a>
-
-        <p class="catalog__product-description">Диаметр 30 см, высота 30 см</p>
-        <span class="catalog__product-price">1 500 руб.</span>
-      </div>
+      <ul class="catalog__product-list">
+        <li class="catalog__product-item">
+          <a href="#" class="catalog__product-link"><img src="https://via.placeholder.com/150x150"
+              alt="Зайчик-попрыгайчик" width="260" height="195">
+            <h3 class="catalog__product-name">Зайчик-попрыгайчик</h3>
+          </a>
+          <p class="catalog__product-description">Рост 30 см, вес 200 г</p>
+          <span class="catalog__product-price">1 200 руб.</span>
+          <a href="#" class="catalog__product-tobasket" aria-label="Добавить товар в корзину"></a>
+        </li>
+        <li class="catalog__product-item">
+          <a href="#" class="catalog__product-link"><img src="https://via.placeholder.com/150x150"
+              alt="Корзинка для белья" width="260" height="195">
+            <h3 class="catalog__product-name">Корзинка для белья</h3>
+          </a>
+          <p class="catalog__product-description">Диаметр 15 см, высота 10 см</p>
+          <span class="catalog__product-price">690 руб.</span>
+          <a href="#" class="catalog__product-tobasket" aria-label="Добавить товар в корзину"></a>
+        </li>
+        <li class="catalog__product-item">
+          <a href="#" class="catalog__product-link"><img src="https://via.placeholder.com/150x150"
+              alt="Большая корзинка для игрушек" width="260" height="195">
+            <h3 class="catalog__product-name">Большая корзинка для игрушек</h3>
+          </a>
+          <p class="catalog__product-description">Диаметр 30 см, высота 30 см</p>
+          <span class="catalog__product-price">1 500 руб.</span>
+          <a href="#" class="catalog__product-tobasket" aria-label="Добавить товар в корзину"></a>
+        </li>
+      </ul>
     </section>
   </main>
   <footer class="page-footer">
-    <section class="page-footer__social social">
-      <h2 class="visually-hidden">Мы в социальных сетях</h2>
-      <a href="#" class="social__link social__link--ig"></a>
-      <a href="#" class="social__link social__link--fb"></a>
-      <a href="#" class="social__link social__link--tw"></a>
-    </section>
+    <ul class="page-footer__social social">
+      <li class="social__item">
+        <a href="#" class="social__link social__link--ig" aria-label="Мы в Instagram"></a>
+      </li>
+      <li class="social__item">
+        <a href="#" class="social__link social__link--fb" aria-label="Мы в Facebook"></a>
+      </li>
+      <li class="social__item">
+        <a href="#" class="social__link social__link--tw" aria-label="Мы в Twitter"></a>
+      </li>
+    </ul>
     <div class="page-footer__copyright copyright">
       <b class="copyright__text">Разработано</b>
-      <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive"></a>
+      <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Сайт htmlacademy.ru"></a>
     </div>
   </footer>
 </body>
