--- a/source/catalog.html
+++ b/source/catalog.html
@@ -70,6 +70,13 @@
         </li>
       </ul>
     </section>
+    <section class="production">
+      <h2 class="production__title">Процесс производства</h2>
+      <video class="production__video" width="260" height="150" poster="https://via.placeholder.com/260x150"></video>
+      <p class="production_text">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как
+        появляются наши товары.</p>
+      <a class="production__button button" href="form.html">Сделать заказ</a>
+    </section>
   </main>
   <footer class="page-footer">
     <ul class="page-footer__social social">
