--- a/source/form.html
+++ b/source/form.html
@@ -35,6 +35,78 @@
     </nav>
   </header>
   <main>
+    <div class="form-header">
+      <h1 class="form-header__title">Вязание на заказ</h1>
+    </div>
+    <section class="form">
+      <h2 class="production__title">Форма заказа</h2>
+      <p class="form__subtitle">Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы
+        свяжемся с вами, чтобы уточнить детали.</p>
+      <form class="form__body" action="https://echo.htmlacademy.ru" method="post">
+        <fieldset class="form__container">
+          <legend class="form__container-title">Тип</legend>
+          <p class="form__container-item">
+            <label class="form__name"><input class="form__radio visually-hidden" type="radio" name="radio-group"
+                value="accessory" checked><span class="form__radio-img"></span>Аксессуар для интерьера</label>
+          </p>
+          <p class="form__container-item">
+            <label class="form__name"><input class="form__radio visually-hidden" type="radio" name="radio-group"
+                value="toy"><span class="form__radio-img"></span>Детская игрушка</label>
+          </p>
+        </fieldset>
+        <fieldset class="form__container">
+          <legend class="form__container-title">Цвет</legend>
+          <p class="form__container-item">
+            <label class="form__name"><input class="form__checkbox visually-hidden" type="checkbox" name="white"
+                checked><span class="form__checkbox-img"></span>Белый</label>
+          </p>
+          <p class="form__container-item">
+            <label class="form__name"><input class="form__checkbox visually-hidden" type="checkbox" name="grey"
+                checked><span class="form__checkbox-img"></span>Серый</label>
+          </p>
+          <p class="form__container-item">
+            <label class="form__name"><input class="form__checkbox visually-hidden" type="checkbox" name="tiffany"><span
+                class="form__checkbox-img"></span>«Тиффани»</label>
+          </p>
+          <p class="form__container-item">
+            <label class="form__name"><input class="form__checkbox visually-hidden" type="checkbox" name="black"><span
+                class="form__checkbox-img"></span>Черный</label>
+          </p>
+          <p class="form__container-item">
+            <label class="form__name"><input class="form__checkbox visually-hidden" type="checkbox" name="pink"><span
+                class="form__checkbox-img"></span>Розовый</label>
+          </p>
+          <p class="form__container-item">
+            <label class="form__name"><input class="form__checkbox visually-hidden" type="checkbox" name="orange"><span
+                class="form__checkbox-img"></span>Оранжевый</label>
+          </p>
+        </fieldset>
+        <fieldset class="form__container">
+          <legend class="form__container-title">ФИО</legend>
+          <label class="form__name">Имя:<input class="form__text" type="text" name="name"
+              placeholder="Введите ваше имя*"></label>
+          <label class="form__name">Фамилия:<input class="form__text" type="text" name="lastname"
+              placeholder="Укажите фамилию*"></label>
+          <label class="form__name">Отчество:<input class="form__text" type="text" name="patronymic"
+              placeholder="Отчество, если желаете"></label>
+        </fieldset>
+        <fieldset class="form__container">
+          <legend class="form__container-title">ТЕЛ</legend>
+          <input class="form__tel" type="tel" name="phone" placeholder="+7 ХХХ ХХХ ХХ ХХ*" required>
+        </fieldset>
+        <fieldset class="form__container">
+          <legend class="form__container-title">E-mail</legend>
+          <input class="form__email" type="email" name="email" placeholder="Ваш Email*" required>
+        </fieldset>
+        <fieldset class="form__container">
+          <legend class="form__container-title">ДОП</legend>
+          <textarea class="form__extra" name="extra" cols="30" rows="10"
+            placeholder="Опишите все ваши пожелания к заказу"></textarea>
+        </fieldset>
+        <p class="form__note">*Поля обязательны для заполнения</p>
+        <button class="form__button button" type="submit">Отправить заказ</button>
+      </form>
+    </section>
 
   </main>
   <footer class="page-footer">
