--- a/source/index.html
+++ b/source/index.html
@@ -98,7 +98,7 @@
           <button class="reviews__button-prev" type="button" aria-label="Предыдущий отзыв"></button>
           <button class="reviews__button-next" type="button" aria-label="Следующий отзыв"></button>
         </div>
-        <a class="reviews__button button" href="form.html">Написать</a>
+        <a class="reviews__button button" href="#">Написать</a>
       </div>
     </section>
     <section class="contacts">
@@ -106,11 +106,11 @@
       <div class="contacts__list">
         <div class="contacts__item">
           <span class="contacts__email-subtitle">e-mail:</span>
-          <span class="contacts_email">info@mimimishkashop.ru</span>
+          <a class="contacts__email" href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a>
         </div>
         <div class="contacts__item">
           <span class="contacts__address-subtitle">адрес:</span>
-          <span class="contacts_address">г. Санкт-Петербург,ул. Большая Конюшенная, д. 19/8, офис 101</span>
+          <span class="contacts__address">г. Санкт-Петербург,ул. Большая Конюшенная, д. 19/8, офис 101</span>
         </div>
       </div>
       <div class="contacts__map">
