Получил обновления от Кекса

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -9,7 +9,7 @@
 
 <body>
   <header class="page-header">
-    <a href="index.html" class="page-header__logo">
+    <a class="page-header__logo" href="index.html" aria-label="Переход на главную">
       <img src="https://via.placeholder.com/150x150" alt="Логотип компании Mishka" width="86" height="35">
     </a>
     <button class="page-header__toggle" type="button">
