--- a/source/index.html
+++ b/source/index.html
@@ -43,7 +43,8 @@
       </div>
       <ul class="product__list">
         <li class="product__list-item"><a class="product__list-link" href="catalog.html">Предметы интерьера</a></li>
-        <li class="product__list-item"><a class="product__list-link" href="catalog.html">Детские игрушки</a></li>
+        <li class="product__list-item product__list-item--othergreen"><a class="product__list-link"
+            href="catalog.html">Детские игрушки</a></li>
       </ul>
     </section>
     <section class="product-week">
