Доделал адаптивные сетки

--- a/source/form.html
+++ b/source/form.html
@@ -200,7 +200,7 @@
             <div class="form__container-title">Тип</div>
             <ul class="form__container-list form__container-list--type">
               <li class="form__container-item">
-                <label class="form__name"
+                <label class="form__name form__name--radio"
                   ><input
                     class="form__radio visually-hidden"
                     type="radio"
@@ -212,7 +212,7 @@
                 >
               </li>
               <li class="form__container-item">
-                <label class="form__name"
+                <label class="form__name form__name--radio"
                   ><input
                     class="form__radio visually-hidden"
                     type="radio"
@@ -227,7 +227,7 @@
             <div class="form__container-title">Цвет</div>
             <ul class="form__container-list form__container-list--color">
               <li class="form__container-item">
-                <label class="form__name"
+                <label class="form__name form__name--checkbox"
                   ><input
                     class="form__checkbox visually-hidden"
                     type="checkbox"
@@ -238,7 +238,7 @@
                 >
               </li>
               <li class="form__container-item">
-                <label class="form__name"
+                <label class="form__name form__name--checkbox"
                   ><input
                     class="form__checkbox visually-hidden"
                     type="checkbox"
@@ -249,7 +249,7 @@
                 >
               </li>
               <li class="form__container-item">
-                <label class="form__name"
+                <label class="form__name form__name--checkbox"
                   ><input
                     class="form__checkbox visually-hidden"
                     type="checkbox"
@@ -259,7 +259,7 @@
                 >
               </li>
               <li class="form__container-item">
-                <label class="form__name"
+                <label class="form__name form__name--checkbox"
                   ><input
                     class="form__checkbox visually-hidden"
                     type="checkbox"
@@ -269,7 +269,7 @@
                 >
               </li>
               <li class="form__container-item">
-                <label class="form__name"
+                <label class="form__name form__name--checkbox"
                   ><input
                     class="form__checkbox visually-hidden"
                     type="checkbox"
@@ -279,7 +279,7 @@
                 >
               </li>
               <li class="form__container-item">
-                <label class="form__name"
+                <label class="form__name form__name--checkbox"
                   ><input
                     class="form__checkbox visually-hidden"
                     type="checkbox"
