Сделал исправления адаптивных сеток

--- a/source/index.html
+++ b/source/index.html
@@ -235,28 +235,22 @@
         <h2 class="about__heading">Коротко о нас:</h2>
         <ul class="about__list">
           <li class="about__item">
-            Экологически <br />
-            чистые материалы
+            Экологически чистые материалы
           </li>
           <li class="about__item">
-            Скандинавский стиль <br />
-            по российской цене
+            Скандинавский стиль по российской цене
           </li>
           <li class="about__item">
-            Увеличивает лайки <br />
-            на фотографиях
+            Увеличивает лайки на фотографиях
           </li>
           <li class="about__item">
-            Связано вручную с <br />
-            любовью и умилением
+            Связано вручную с любовью и умилением
           </li>
           <li class="about__item">
-            Поддержка отечественного <br />
-            производителя
+            Поддержка отечественного производителя
           </li>
           <li class="about__item">
-            Поставляется в <br />
-            подарочной упаковке
+            Поставляется в подарочной упаковке
           </li>
         </ul>
       </section>
