--- a/source/form.html
+++ b/source/form.html
@@ -143,13 +143,17 @@
         </button>
         <nav class="page-header__nav main-nav main-nav--no-js">
           <ul class="main-nav__inner-list">
-            <li class="main-nav__inner-item">
-              <a class="main-nav__inner-item-link" href="catalog.html"
+            <li class="main-nav__inner-item main-nav__inner-item--catalog">
+              <a
+                class="main-nav__inner-item-link main-nav__inner-item-link--fontsize"
+                href="catalog.html"
                 >Каталог товаров</a
               >
             </li>
-            <li class="main-nav__inner-item">
-              <a class="main-nav__inner-item-link" href="form.html"
+            <li class="main-nav__inner-item main-nav__inner-item--form">
+              <a
+                class="main-nav__inner-item-link main-nav__inner-item-link--fontsize"
+                href="form.html"
                 >Вязание на заказ</a
               >
             </li>
@@ -164,12 +168,52 @@
           </ul>
 
           <ul class="main-nav__help-list">
-            <li class="main-nav__help-item">
-              <a class="main-nav__help-item-link" href="#">Поиск по сайту</a>
+            <li class="main-nav__help-item main-nav__help-item--search">
+              <a
+                class="main-nav__help-item-link main-nav__help-item-link--search"
+                href="#"
+                ><svg
+                  class="main-nav__help-item-link-search-icon"
+                  version="1.1"
+                  xmlns="http://www.w3.org/2000/svg"
+                  xmlns:xlink="http://www.w3.org/1999/xlink"
+                  x="0px"
+                  y="0px"
+                  width="17.6px"
+                  height="17.6px"
+                  viewBox="-0.8 -0.8 17.6 17.6"
+                  enable-background="new -0.8 -0.8 17.6 17.6"
+                  xml:space="preserve"
+                >
+                  <path
+                    fill="#231F20"
+                    d="M16.47,14.93l-3.415-3.415C14.02,10.226,14.6,8.634,14.6,6.899c0-4.253-3.447-7.699-7.7-7.699 S-0.8,2.646-0.8,6.899s3.446,7.7,7.699,7.7c1.734,0,3.326-0.58,4.613-1.546l3.417,3.416c0.203,0.202,0.418,0.33,0.771,0.33 c0.607,0,1.1-0.492,1.1-1.1C16.8,15.459,16.739,15.2,16.47,14.93z M1.399,6.899c0-3.038,2.462-5.5,5.5-5.5s5.5,2.462,5.5,5.5 s-2.462,5.5-5.5,5.5S1.399,9.938,1.399,6.899z"
+                  />
+                </svg>
+                Поиск по сайту</a
+              >
             </li>
-            <li class="main-nav__help-item">
+            <li class="main-nav__help-item main-nav__help-item--card">
               <a class="main-nav__help-item-link" href="#"
-                >Корзина: пока пуста</a
+                ><svg
+                  class="main-nav__help-item-link-card-icon"
+                  version="1.1"
+                  xmlns="http://www.w3.org/2000/svg"
+                  xmlns:xlink="http://www.w3.org/1999/xlink"
+                  x="0px"
+                  y="0px"
+                  width="20.294px"
+                  height="18.849px"
+                  viewBox="264.205 370.961 20.294 18.849"
+                  enable-background="new 264.205 370.961 20.294 18.849"
+                  xml:space="preserve"
+                >
+                  <path
+                    fill="#231F20"
+                    d="M283.75,378.19h-3.151l-3.407-6.814c-0.185-0.37-0.634-0.52-1.006-0.335 c-0.371,0.186-0.521,0.636-0.335,1.006l3.071,6.143h-9.138l3.072-6.143c0.185-0.371,0.035-0.821-0.335-1.006 c-0.37-0.185-0.821-0.035-1.006,0.335l-3.407,6.814h-3.151c-0.414,0-0.75,0.336-0.75,0.75s0.336,0.75,0.75,0.75h0.157l0.855,2.991 c-0.187,0.137-0.316,0.347-0.316,0.595c0,0.396,0.309,0.71,0.697,0.739l1.656,5.795h12.697l1.656-5.795 c0.388-0.028,0.698-0.344,0.698-0.739c0-0.249-0.129-0.459-0.316-0.596l0.854-2.991h0.157c0.414,0,0.75-0.336,0.75-0.75 S284.164,378.19,283.75,378.19z M279.569,388.311h-10.433l-1.224-4.284h12.881L279.569,388.311z M281.222,382.526h-13.739 l-0.81-2.836h15.359L281.222,382.526z"
+                  />
+                </svg>
+                Корзина: пока пуста</a
               >
             </li>
             <li class="main-nav__help-item main-nav__help-item--tablet">
@@ -183,7 +227,28 @@
     </header>
     <main>
       <div class="form-header">
-        <h1 class="form-header__title">Вязание на заказ</h1>
+        <div class="container">
+          <h1 class="form-header__title">Вязание на заказ</h1>
+        </div>
+
+        <svg
+          class="form-header-img"
+          version="1.1"
+          xmlns="http://www.w3.org/2000/svg"
+          xmlns:xlink="http://www.w3.org/1999/xlink"
+          x="0px"
+          y="0px"
+          width="1150px"
+          height="34px"
+          viewBox="0 0 1150 34"
+          enable-background="new 0 0 1150 34"
+          xml:space="preserve"
+        >
+          <path
+            fill="#ffffff"
+            d="M1121.252,0c-14.375,0-14.375,14-28.749,14s-14.374-14-28.748-14s-14.374,14-28.748,14 c-14.375,0-14.375-14-28.75-14c-14.374,0-14.374,14-28.748,14S963.135,0,948.761,0s-14.374,14-28.749,14S905.637,0,891.263,0 s-14.374,14-28.749,14s-14.375-14-28.75-14c-14.371,0-14.371,14-28.743,14c-14.375,0-14.375-14-28.75-14 c-14.372,0-14.372,14-28.744,14c-14.374,0-14.374-14-28.747-14s-14.373,14-28.747,14C675.66,14,675.66,0,661.287,0 c-14.374,0-14.374,14-28.748,14c-14.375,0-14.375-14-28.751-14c-14.374,0-14.374,14-28.748,14S560.666,0,546.292,0 s-14.374,14-28.748,14C503.17,14,503.17,0,488.796,0c-14.375,0-14.375,14-28.75,14C445.67,14,445.67,0,431.293,0 c-14.375,0-14.375,14-28.75,14c-14.375,0-14.375-14-28.751-14c-14.375,0-14.375,14-28.75,14S330.666,0,316.291,0 s-14.375,14-28.751,14c-14.376,0-14.376-14-28.753-14c-14.374,0-14.374,14-28.747,14c-14.375,0-14.375-14-28.75-14 c-14.375,0-14.375,14-28.751,14c-14.377,0-14.377-14-28.754-14c-14.377,0-14.377,14-28.755,14c-14.378,0-14.378-14-28.756-14 S71.896,14,57.518,14C43.139,14,43.139,0,28.759,0S14.38,14,0,14v20h1150V14C1135.626,14,1135.626,0,1121.252,0z"
+          />
+        </svg>
       </div>
       <section class="form">
         <h2 class="visually-hidden">Форма заказа</h2>
