Сделал исправления, добавил курсоры для кнопок, доделал состояния focus и active

--- a/source/index.html
+++ b/source/index.html
@@ -10,7 +10,7 @@
   <body class="page-body">
     <header class="page-header container">
       <div class="page-header__top">
-        <a class="page-header__logo">
+        <a class="page-header__logo page-header__logo--main">
           <svg
             class="page-header__logo-img"
             version="1.1"
@@ -649,7 +649,10 @@
     </main>
     <footer class="page-footer">
       <div class="page-footer__inner container">
-        <a class="page-footer__logo" aria-label="Лого Мишка">
+        <a
+          class="page-footer__logo page-footer__logo--main"
+          aria-label="Лого Мишка"
+        >
           <svg
             class="page-footer__logo-img"
             version="1.1"
