--- a/source/catalog.html
+++ b/source/catalog.html
@@ -177,6 +177,29 @@
             <a href="#" class="catalog__product-link"
               ><picture>
                 <source
+                  type="image/webp"
+                  media="(min-width: 1150px)"
+                  srcset="
+                    img/photo-hare-desktop@1x.webp 1x,
+                    img/photo-hare-desktop@2x.webp 2x
+                  "
+                />
+                <source
+                  type="image/webp"
+                  media="(min-width: 768px)"
+                  srcset="
+                    img/photo-hare-tablet@1x.webp 1x,
+                    img/photo-hare-tablet@2x.webp 2x
+                  "
+                />
+                <source
+                  type="image/webp"
+                  srcset="
+                    img/photo-hare-mobile@1x.webp 1x,
+                    img/photo-hare-mobile@2x.webp 2x
+                  "
+                />
+                <source
                   media="(min-width: 1150px)"
                   srcset="
                     img/photo-hare-desktop@1x.jpg 1x,
@@ -238,6 +261,29 @@
             <a href="#" class="catalog__product-link"
               ><picture>
                 <source
+                  type="image/webp"
+                  media="(min-width: 1150px)"
+                  srcset="
+                    img/photo-bowl-desktop@1x.webp 1x,
+                    img/photo-bowl-desktop@2x.webp 2x
+                  "
+                />
+                <source
+                  type="image/webp"
+                  media="(min-width: 768px)"
+                  srcset="
+                    img/photo-bowl-tablet@1x.webp 1x,
+                    img/photo-bowl-tablet@2x.webp 2x
+                  "
+                />
+                <source
+                  type="image/webp"
+                  srcset="
+                    img/photo-bowl-mobile@1x.webp 1x,
+                    img/photo-bowl-mobile@2x.webp 2x
+                  "
+                />
+                <source
                   media="(min-width: 1150px)"
                   srcset="
                     img/photo-bowl-desktop@1x.jpg 1x,
@@ -298,6 +344,29 @@
           <li class="catalog__product-item">
             <a href="#" class="catalog__product-link"
               ><picture>
+                <source
+                  type="image/webp"
+                  media="(min-width: 1150px)"
+                  srcset="
+                    img/photo-toys-desktop@1x.webp 1x,
+                    img/photo-toys-desktop@2x.webp 2x
+                  "
+                />
+                <source
+                  type="image/webp"
+                  media="(min-width: 768px)"
+                  srcset="
+                    img/photo-toys-tablet@1x.webp 1x,
+                    img/photo-toys-tablet@2x.webp 2x
+                  "
+                />
+                <source
+                  type="image/webp"
+                  srcset="
+                    img/photo-toys-mobile@1x.webp 1x,
+                    img/photo-toys-mobile@2x.webp 2x
+                  "
+                />
                 <source
                   media="(min-width: 1150px)"
                   srcset="
@@ -385,6 +454,23 @@
           </svg>
           <h2 class="production__title-top">Процесс производства</h2>
           <picture>
+            <source
+              type="image/webp"
+              media="(min-width: 1150px)"
+              srcset="
+                img/video-desktop@1x.webp 1x,
+                img/video-desktop@2x.webp 2x
+              "
+            />
+            <source
+              type="image/webp"
+              media="(min-width: 768px)"
+              srcset="img/video-tablet@1x.webp 1x, img/video-tablet@2x.webp 2x"
+            />
+            <source
+              type="image/webp"
+              srcset="img/video-mobile@1x.webp 1x, img/video-mobile@2x.webp 2x"
+            />
             <source
               media="(min-width: 1150px)"
               srcset="img/video-desktop@1x.jpg 1x, img/video-desktop@2x.jpg 2x"
