--- a/source/catalog.html
+++ b/source/catalog.html
@@ -204,7 +204,7 @@
               <div class="catalog__product-bottom">
                 <span class="catalog__product-price">1 200 руб.</span>
                 <a
-                  href="#"
+                  data-modal="modal_1"
                   class="catalog__product-tobasket"
                   aria-label="Добавить товар в корзину"
                   ><svg
@@ -281,7 +281,7 @@
               <div class="catalog__product-bottom">
                 <span class="catalog__product-price">690 руб.</span>
                 <a
-                  href="#"
+                  data-modal="modal_1"
                   class="catalog__product-tobasket"
                   aria-label="Добавить товар в корзину"
                   ><svg
@@ -361,7 +361,7 @@
               <div class="catalog__product-bottom">
                 <span class="catalog__product-price">1 500 руб.</span>
                 <a
-                  href="#"
+                  data-modal="modal_1"
                   class="catalog__product-tobasket"
                   aria-label="Добавить товар в корзину"
                   ><svg
@@ -517,6 +517,54 @@
         </div>
       </div>
     </footer>
+    <section class="modal">
+      <div class="modal__overlay" data-close=""></div>
+      <div class="modal__body" id="modal_1">
+        <h2 class="modal__body-title">Добавить в корзину</h2>
+        <p class="modal__body-description">Выберите размер:</p>
+        <form
+          class="modal__body-form"
+          method="post"
+          action="https://echo.htmlacademy.ru"
+        >
+          <ul class="modal__body-list">
+            <li class="modal__body-item">
+              <label
+                ><input
+                  class="modal__body-size visually-hidden"
+                  type="radio"
+                  name="product-size"
+                  value="S"
+                  checked
+                /><span class="modal__body-size-img">S</span></label
+              >
+            </li>
+            <li class="modal__body-item">
+              <label
+                ><input
+                  class="modal__body-size visually-hidden"
+                  type="radio"
+                  name="product-size"
+                  value="M"
+                /><span class="modal__body-size-img">M</span></label
+              >
+            </li>
+            <li class="modal__body-item">
+              <label
+                ><input
+                  class="modal__body-size visually-hidden"
+                  type="radio"
+                  name="product-size"
+                  value="L"
+                /><span class="modal__body-size-img">L</span></label
+              >
+            </li>
+          </ul>
+          <button class="modal__body-button" type="submit">Добавить</button>
+        </form>
+      </div>
+    </section>
     <script src="js/index.js"></script>
+    <script src="js/modal.js"></script>
   </body>
 </html>
