Сделал слайдер Отзывов

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -32,7 +32,7 @@
       type="font/woff"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style.min.css" />
   </head>
 
   <body class="page-body">
@@ -56,12 +56,12 @@
         >
           <span class="page-header__toggle-icone-open">
             <svg width="19.958px" height="14px" aria-hidden="true">
-              <use xlink:href="sprite.svg#icon-menu-open"></use>
+              <use xlink:href="img/sprite.svg#icon-menu-open"></use>
             </svg>
           </span>
           <span class="page-header__toggle-icone-close">
             <svg width="20.514px" height="20.512px" aria-hidden="true">
-              <use xlink:href="sprite.svg#icon-menu-close"></use>
+              <use xlink:href="img/sprite.svg#icon-menu-close"></use>
             </svg>
           </span>
         </button>
@@ -102,7 +102,7 @@
                   height="17.6px"
                   role="img"
                 >
-                  <use xlink:href="sprite.svg#icon-search"></use>
+                  <use xlink:href="img/sprite.svg#icon-search"></use>
                 </svg>
                 Поиск по сайту</a
               >
@@ -115,7 +115,7 @@
                   height="18.849px"
                   role="img"
                 >
-                  <use xlink:href="sprite.svg#icon-card"></use>
+                  <use xlink:href="img/sprite.svg#icon-cart"></use>
                 </svg>
                 Корзина: пока пуста</a
               >
@@ -135,7 +135,7 @@
           <h1 class="catalog-header__title">Каталог товаров</h1>
         </div>
         <svg class="catalog-header-img" width="1150px" height="34px">
-          <use xlink:href="sprite.svg#white-line"></use>
+          <use xlink:href="img/sprite.svg#icon-bg-zigzag-fill"></use>
         </svg>
       </div>
       <section class="catalog container">
@@ -213,7 +213,7 @@
                     height="18.849px"
                     role="img"
                   >
-                    <use xlink:href="sprite.svg#icon-card"></use>
+                    <use xlink:href="img/sprite.svg#icon-cart"></use>
                   </svg>
                 </a>
               </div>
@@ -290,7 +290,7 @@
                     height="18.849px"
                     role="img"
                   >
-                    <use xlink:href="sprite.svg#icon-card"></use>
+                    <use xlink:href="img/sprite.svg#icon-cart"></use>
                   </svg>
                 </a>
               </div>
@@ -370,7 +370,7 @@
                     height="18.849px"
                     role="img"
                   >
-                    <use xlink:href="sprite.svg#icon-card"></use>
+                    <use xlink:href="img/sprite.svg#icon-cart"></use>
                   </svg>
                 </a>
               </div>
@@ -430,7 +430,7 @@
               height="76.891px"
               aria-hidden="true"
             >
-              <use xlink:href="sprite.svg#video-button"></use>
+              <use xlink:href="img/sprite.svg#icon-play"></use>
             </svg>
           </button>
           <div class="production__inner-bottom">
@@ -459,7 +459,7 @@
             height="34.056px"
             role="img"
           >
-            <use xlink:href="sprite.svg#footer-logo-mishka"></use>
+            <use xlink:href="img/sprite.svg#icon-logo-footer"></use>
           </svg>
         </a>
         <ul class="page-footer__social social">
@@ -471,7 +471,7 @@
                 height="21.334px"
                 role="img"
               >
-                <use xlink:href="sprite.svg#icon-instagram"></use></svg
+                <use xlink:href="img/sprite.svg#icon-insta"></use></svg
             ></a>
           </li>
           <li class="social__item">
@@ -482,7 +482,7 @@
                 height="27.718px"
                 role="img"
               >
-                <use xlink:href="sprite.svg#icon-facebook"></use>
+                <use xlink:href="img/sprite.svg#icon-fb"></use>
               </svg>
             </a>
           </li>
@@ -494,7 +494,7 @@
                 height="20.168px"
                 role="img"
               >
-                <use xlink:href="sprite.svg#icon-twitter"></use>
+                <use xlink:href="img/sprite.svg#icon-twitter"></use>
               </svg>
             </a>
           </li>
@@ -511,7 +511,7 @@
               height="34.09px"
               role="img"
             >
-              <use xlink:href="sprite.svg#logo-htmlacademy"></use>
+              <use xlink:href="img/sprite.svg#icon-logo-htmlacademy"></use>
             </svg>
           </a>
         </div>
