Полностью доделал Gulp сборку

--- a/source/index.html
+++ b/source/index.html
@@ -36,6 +36,9 @@
   </head>
 
   <body class="page-body">
+    <div style="display: none;">
+      <include src="build/img/sprite.svg"></include>
+    </div>
     <header class="page-header container">
       <div class="page-header__top">
         <a class="page-header__logo page-header__logo--main">
@@ -52,12 +55,12 @@
         >
           <span class="page-header__toggle-icone-open">
             <svg width="19.958px" height="14px" aria-hidden="true">
-              <use xlink:href="img/sprite.svg#icon-menu-open"></use>
+              <use xlink:href="#icon-menu-open"></use>
             </svg>
           </span>
           <span class="page-header__toggle-icone-close">
             <svg width="20.514px" height="20.512px" aria-hidden="true">
-              <use xlink:href="img/sprite.svg#icon-menu-close"></use>
+              <use xlink:href="#icon-menu-close"></use>
             </svg>
           </span>
         </button>
@@ -98,7 +101,7 @@
                   height="17.6px"
                   role="img"
                 >
-                  <use xlink:href="img/sprite.svg#icon-search"></use>
+                  <use xlink:href="#icon-search"></use>
                 </svg>
                 Поиск по сайту</a
               >
@@ -111,7 +114,7 @@
                   height="18.849px"
                   role="img"
                 >
-                  <use xlink:href="img/sprite.svg#icon-cart"></use>
+                  <use xlink:href="#icon-cart"></use>
                 </svg>
                 Корзина: пока пуста</a
               >
@@ -147,7 +150,7 @@
                   height="62.411px"
                   role="img"
                 >
-                  <use xlink:href="img/sprite.svg#icon-interior"></use>
+                  <use xlink:href="#icon-interior"></use>
                 </svg>
               </a>
             </li>
@@ -162,7 +165,7 @@
                   height="59.62px"
                   role="img"
                 >
-                  <use xlink:href="img/sprite.svg#icon-toy"></use>
+                  <use xlink:href="#icon-toy"></use>
                 </svg>
               </a>
             </li>
@@ -174,7 +177,7 @@
           height="34px"
           aria-hidden="true"
         >
-          <use xlink:href="img/sprite.svg#icon-bg-zigzag-fill"></use>
+          <use xlink:href="#icon-bg-zigzag-fill"></use>
         </svg>
       </section>
       <section class="product-week container">
@@ -212,7 +215,7 @@
       </section>
       <section class="about">
         <svg class="about__top-img" width="1150px" height="23px">
-          <use xlink:href="img/sprite.svg#icon-bg-zigzag-line"></use>
+          <use xlink:href="#icon-bg-zigzag-line"></use>
         </svg>
         <div class="about__inner container">
           <h2 class="about__heading">Коротко о нас:</h2>
@@ -323,7 +326,7 @@
                 aria-label="Предыдущий отзыв"
               >
                 <svg width="50px" height="26.003px" aria-hidden="true">
-                  <use xlink:href="img/sprite.svg#icon-left-arrow"></use>
+                  <use xlink:href="#icon-left-arrow"></use>
                 </svg>
               </button>
               <button
@@ -332,7 +335,7 @@
                 aria-label="Следующий отзыв"
               >
                 <svg width="50px" height="26.003px" aria-hidden="true">
-                  <use xlink:href="img/sprite.svg#icon-right-arrow"></use>
+                  <use xlink:href="#icon-right-arrow"></use>
                 </svg>
               </button>
             </div>
@@ -347,7 +350,7 @@
           height="23px"
           aria-hidden="true"
         >
-          <use xlink:href="img/sprite.svg#icon-bg-zigzag-line"></use>
+          <use xlink:href="#icon-bg-zigzag-line"></use>
         </svg>
         <div class="contacts__inner container">
           <img
@@ -399,7 +402,7 @@
             height="34.056px"
             role="img"
           >
-            <use xlink:href="img/sprite.svg#icon-logo-footer"></use>
+            <use xlink:href="#icon-logo-footer"></use>
           </svg>
         </a>
         <ul class="page-footer__social social">
@@ -411,7 +414,7 @@
                 height="21.334px"
                 role="img"
               >
-                <use xlink:href="img/sprite.svg#icon-insta"></use></svg
+                <use xlink:href="#icon-insta"></use></svg
             ></a>
           </li>
           <li class="social__item">
@@ -422,7 +425,7 @@
                 height="27.718px"
                 role="img"
               >
-                <use xlink:href="img/sprite.svg#icon-fb"></use>
+                <use xlink:href="#icon-fb"></use>
               </svg>
             </a>
           </li>
@@ -434,7 +437,7 @@
                 height="20.168px"
                 role="img"
               >
-                <use xlink:href="img/sprite.svg#icon-twitter"></use>
+                <use xlink:href="#icon-twitter"></use>
               </svg>
             </a>
           </li>
@@ -451,7 +454,7 @@
               height="34.09px"
               role="img"
             >
-              <use xlink:href="img/sprite.svg#icon-logo-htmlacademy"></use>
+              <use xlink:href="#icon-logo-htmlacademy"></use>
             </svg>
           </a>
         </div>
