--- a/source/catalog.html
+++ b/source/catalog.html
@@ -36,6 +36,9 @@
   </head>
 
   <body class="page-body">
+    <div style="display: none;">
+      <include src="build/img/sprite.svg"></include>
+    </div>
     <header class="page-header container">
       <div class="page-header__top">
         <a
@@ -56,12 +59,12 @@
         >
           <span class="page-header__toggle-icone-open">
             <svg width="19.958px" height="14px" aria-hidden="true">
-              <use xlink:href="img/sprite.svg#icon-menu-open"></use>
+              <use xlink:href="#icon-menu-open"></use>
             </svg>
           </span>
           <span class="page-header__toggle-icone-close">
             <svg width="20.514px" height="20.512px" aria-hidden="true">
-              <use xlink:href="img/sprite.svg#icon-menu-close"></use>
+              <use xlink:href="#icon-menu-close"></use>
             </svg>
           </span>
         </button>
@@ -102,7 +105,7 @@
                   height="17.6px"
                   role="img"
                 >
-                  <use xlink:href="img/sprite.svg#icon-search"></use>
+                  <use xlink:href="#icon-search"></use>
                 </svg>
                 Поиск по сайту</a
               >
@@ -115,7 +118,7 @@
                   height="18.849px"
                   role="img"
                 >
-                  <use xlink:href="img/sprite.svg#icon-cart"></use>
+                  <use xlink:href="#icon-cart"></use>
                 </svg>
                 Корзина: пока пуста</a
               >
@@ -135,7 +138,7 @@
           <h1 class="catalog-header__title">Каталог товаров</h1>
         </div>
         <svg class="catalog-header-img" width="1150px" height="34px">
-          <use xlink:href="img/sprite.svg#icon-bg-zigzag-fill"></use>
+          <use xlink:href="#icon-bg-zigzag-fill"></use>
         </svg>
       </div>
       <section class="catalog container">
@@ -213,7 +216,7 @@
                     height="18.849px"
                     role="img"
                   >
-                    <use xlink:href="img/sprite.svg#icon-cart"></use>
+                    <use xlink:href="#icon-cart"></use>
                   </svg>
                 </a>
               </div>
@@ -290,7 +293,7 @@
                     height="18.849px"
                     role="img"
                   >
-                    <use xlink:href="img/sprite.svg#icon-cart"></use>
+                    <use xlink:href="#icon-cart"></use>
                   </svg>
                 </a>
               </div>
@@ -370,7 +373,7 @@
                     height="18.849px"
                     role="img"
                   >
-                    <use xlink:href="img/sprite.svg#icon-cart"></use>
+                    <use xlink:href="#icon-cart"></use>
                   </svg>
                 </a>
               </div>
@@ -430,7 +433,7 @@
               height="76.891px"
               aria-hidden="true"
             >
-              <use xlink:href="img/sprite.svg#icon-play"></use>
+              <use xlink:href="#icon-play"></use>
             </svg>
           </button>
           <div class="production__inner-bottom">
@@ -459,7 +462,7 @@
             height="34.056px"
             role="img"
           >
-            <use xlink:href="img/sprite.svg#icon-logo-footer"></use>
+            <use xlink:href="#icon-logo-footer"></use>
           </svg>
         </a>
         <ul class="page-footer__social social">
@@ -471,7 +474,7 @@
                 height="21.334px"
                 role="img"
               >
-                <use xlink:href="img/sprite.svg#icon-insta"></use></svg
+                <use xlink:href="#icon-insta"></use></svg
             ></a>
           </li>
           <li class="social__item">
@@ -482,7 +485,7 @@
                 height="27.718px"
                 role="img"
               >
-                <use xlink:href="img/sprite.svg#icon-fb"></use>
+                <use xlink:href="#icon-fb"></use>
               </svg>
             </a>
           </li>
@@ -494,7 +497,7 @@
                 height="20.168px"
                 role="img"
               >
-                <use xlink:href="img/sprite.svg#icon-twitter"></use>
+                <use xlink:href="#icon-twitter"></use>
               </svg>
             </a>
           </li>
@@ -511,7 +514,7 @@
               height="34.09px"
               role="img"
             >
-              <use xlink:href="img/sprite.svg#icon-logo-htmlacademy"></use>
+              <use xlink:href="#icon-logo-htmlacademy"></use>
             </svg>
           </a>
         </div>
