--- a/source/form.html
+++ b/source/form.html
@@ -36,6 +36,9 @@
   </head>
 
   <body class="page-body">
+    <div style="display: none;">
+      <include src="build/img/sprite.svg"></include>
+    </div>
     <header class="page-header container">
       <div class="page-header__top">
         <a
@@ -56,12 +59,12 @@
         >
           <span class="page-header__toggle-icone-open">
             <svg width="19.958px" height="14px" aria-hidden="true">
-              <use xlink:href="img/sprite.svg#icon-menu-open"></use>
+              <use xlink:href="#icon-menu-open"></use>
             </svg>
           </span>
           <span class="page-header__toggle-icone-close">
             <svg width="20.514px" height="20.512px" aria-hidden="true">
-              <use xlink:href="img/sprite.svg#icon-menu-close"></use>
+              <use xlink:href="#icon-menu-close"></use>
             </svg>
           </span>
         </button>
@@ -102,7 +105,7 @@
                   height="17.6px"
                   role="img"
                 >
-                  <use xlink:href="img/sprite.svg#icon-search"></use>
+                  <use xlink:href="#icon-search"></use>
                 </svg>
                 Поиск по сайту</a
               >
@@ -115,7 +118,7 @@
                   height="18.849px"
                   role="img"
                 >
-                  <use xlink:href="img/sprite.svg#icon-cart"></use>
+                  <use xlink:href="#icon-cart"></use>
                 </svg>
                 Корзина: пока пуста</a
               >
@@ -135,7 +138,7 @@
           <h1 class="form-header__title">Вязание на заказ</h1>
         </div>
         <svg class="form-header-img" width="1150px" height="34px">
-          <use xlink:href="img/sprite.svg#icon-bg-zigzag-fill"></use>
+          <use xlink:href="#icon-bg-zigzag-fill"></use>
         </svg>
       </div>
       <section class="form">
@@ -303,7 +306,7 @@
                 height="24.333px"
                 aria-hidden="true"
               >
-                <use xlink:href="img/sprite.svg#icon-phone"></use>
+                <use xlink:href="#icon-phone"></use>
               </svg>
             </label>
 
@@ -329,7 +332,7 @@
                 height="32px"
                 aria-hidden="true"
               >
-                <use xlink:href="img/sprite.svg#icon-mail"></use>
+                <use xlink:href="#icon-mail"></use>
               </svg>
             </label>
           </div>
@@ -370,7 +373,7 @@
             height="34.056px"
             role="img"
           >
-            <use xlink:href="img/sprite.svg#icon-logo-footer"></use>
+            <use xlink:href="#icon-logo-footer"></use>
           </svg>
         </a>
         <ul class="page-footer__social social">
@@ -382,7 +385,7 @@
                 height="21.334px"
                 role="img"
               >
-                <use xlink:href="img/sprite.svg#icon-insta"></use></svg
+                <use xlink:href="#icon-insta"></use></svg
             ></a>
           </li>
           <li class="social__item">
@@ -393,7 +396,7 @@
                 height="27.718px"
                 role="img"
               >
-                <use xlink:href="img/sprite.svg#icon-fb"></use>
+                <use xlink:href="#icon-fb"></use>
               </svg>
             </a>
           </li>
@@ -405,7 +408,7 @@
                 height="20.168px"
                 role="img"
               >
-                <use xlink:href="img/sprite.svg#icon-twitter"></use>
+                <use xlink:href="#icon-twitter"></use>
               </svg>
             </a>
           </li>
@@ -422,7 +425,7 @@
               height="34.09px"
               role="img"
             >
-              <use xlink:href="img/sprite.svg#icon-logo-htmlacademy"></use>
+              <use xlink:href="#icon-logo-htmlacademy"></use>
             </svg>
           </a>
         </div>
