Склеил js в один фаил

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -13,23 +13,9 @@
     />
     <link
       rel="preload"
-      href="fonts/opensans.woff"
-      as="font"
-      type="font/woff"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="preload"
       href="fonts/opensansbold.woff2"
       as="font"
       type="font/woff2"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="preload"
-      href="fonts/opensansbold.woff"
-      as="font"
-      type="font/woff"
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="css/style.min.css" />
@@ -99,7 +85,8 @@
               <a
                 class="main-nav__help-item-link main-nav__help-item-link--search"
                 href="#"
-                ><svg
+              >
+                <svg
                   class="main-nav__help-item-link-search-icon"
                   width="17.6px"
                   height="17.6px"
@@ -111,8 +98,8 @@
               >
             </li>
             <li class="main-nav__help-item main-nav__help-item--card">
-              <a class="main-nav__help-item-link" href="#"
-                ><svg
+              <a class="main-nav__help-item-link" href="#">
+                <svg
                   class="main-nav__help-item-link-card-icon"
                   width="20.294px"
                   height="18.849px"
@@ -150,7 +137,8 @@
               href="#"
               class="catalog__product-link"
               aria-label="Переход на страницу товара"
-              ><picture>
+            >
+              <picture>
                 <source
                   type="image/webp"
                   media="(min-width: 1150px)"
@@ -227,7 +215,8 @@
               href="#"
               class="catalog__product-link"
               aria-label="Переход на страницу товара"
-              ><picture>
+            >
+              <picture>
                 <source
                   type="image/webp"
                   media="(min-width: 1150px)"
@@ -304,7 +293,8 @@
               href="#"
               class="catalog__product-link"
               aria-label="Переход на страницу товара"
-              ><picture>
+            >
+              <picture>
                 <source
                   type="image/webp"
                   media="(min-width: 1150px)"
@@ -567,7 +557,6 @@
         </form>
       </div>
     </section>
-    <script src="js/index.js"></script>
-    <script src="js/modal.js"></script>
+    <script src="js/index.min.js"></script>
   </body>
 </html>
