--- a/source/form.html
+++ b/source/form.html
@@ -13,23 +13,9 @@
     />
     <link
       rel="preload"
-      href="fonts/opensans.woff"
-      as="font"
-      type="font/woff"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="preload"
       href="fonts/opensansbold.woff2"
       as="font"
       type="font/woff2"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="preload"
-      href="fonts/opensansbold.woff"
-      as="font"
-      type="font/woff"
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="css/style.min.css" />
@@ -431,6 +417,6 @@
         </div>
       </div>
     </footer>
-    <script src="js/index.js"></script>
+    <script src="js/index.min.js"></script>
   </body>
 </html>
