Проверил переполнение Главной страницы

--- a/source/index.html
+++ b/source/index.html
@@ -120,8 +120,7 @@
         <h2 class="visually-hidden">Товары магазина</h2>
         <div class="product__inner container container--no-mobile-padding">
           <p class="product__slogan">
-            Милые штуки ручной <br />
-            работы для дома
+            Милые штуки ручной работы для дома
           </p>
 
           <ul class="product__list">
