--- a/source/index.html
+++ b/source/index.html
@@ -128,8 +128,8 @@
               <a
                 class="product__list-link product__list-link--left-hover"
                 href="catalog.html"
-                >Предметы <br />
-                интерьера<svg
+                ><span>Предметы интерьера</span
+                ><svg
                   class="product__list-link-interior"
                   width="40.219px"
                   height="62.411px"
@@ -143,8 +143,8 @@
               <a
                 class="product__list-link product__list-link--right-hover"
                 href="catalog.html"
-                >Детские <br />
-                игрушки<svg
+                ><span>Детские игрушки</span>
+                <svg
                   class="product__list-link-toy"
                   width="60px"
                   height="59.62px"
